@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity User {
	* id : number <<generated>>
	--
	* role : integer
	* email : string
	first_name : string
	last_name : string
	avatar : string
	phone_number : string
	devise-related fields
}

entity Restaurant {
	* id : number <<generated>>
	--
	* name : string
	* phone_number : string
	* address : string
	picture : string
	description : text
}

entity Dish {
	* id : number <<generated>>
	--
	* restaurant_id : number <<FK>>
	* dish_type_id : number <<FK>>
	* price : decimal
	weight : float
	* name : string
	picture : string
}

entity DishType {
	* id : number <<generated>>
	* name : string
	heading : string
}

entity Order {
	* id : number <<generated>>
	* user_id : number <<FK>>
	* completed : boolean
}

entity LineItem {
	* id : number <<generated>>
	--
	* order_id : number <<FK>>
	* dish_id : number <<FK>>
}

Restaurant |o..o{ Dish
DishType |o..o{ Dish
User |o..o{ Order
LineItem }o..o{ Order
LineItem }o..o{ Dish
		
@enduml
